[package]
name = "time_measuring_rtic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device"]}
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
rtt-target = { version = "^0.3.1", features = ["cortex-m"]}
panic-rtt-target = "0.1.3"
panic-halt = "0.2.0"
cortex-m-rtic = "1.1.4"
systick-monotonic = "1.0.1"
rtic-monotonics = "1.5.0"
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
alloc-cortex-m = "0.4.4"

[[bin]]
name = "time_measuring_rtic"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
